--- a/invite.html
+++ b/invite.html
@@ -5,14 +5,13 @@
 <body>
 
 <center><h1>Ur mom</h1></center>
-<center><form action="https://discord.com/api/oauth2/authorize?client_id=838262609090052108&permissions=8&scope=bot">
-    <input type="submit" value="Invite" />
-</form></center>
-<center><p>Made By <a href="https://discord.bio/p/mad45">M Λ D </a></p></center>
+<center> <a href="https://discord.com/api/oauth2/authorize?client_id=838262609090052108&permissions=8&scope=bot">invite</a></center>
+<center><p>Made By <a href="https://discord.bio/p/mad45">M Λ D</a></p></center>
 <style>
     h1 {
       font-size: 100px;
     }
     
+    </style>
 </body>
 </html>
