--- a/invite.html
+++ b/invite.html
@@ -5,7 +5,7 @@
 <body>
 
 <center><h1>Ur mom</h1></center>
-<center> <a href="https://discord.com/api/oauth2/authorize?client_id=838262609090052108&permissions=8&scope=bot">invite</a></center>
+<center><h1><a href="https://discord.com/api/oauth2/authorize?client_id=838262609090052108&permissions=8&scope=bot">invite</a><h1></center>
 <center><p>Made By <a href="https://discord.bio/p/mad45">M Λ D</a></p></center>
 <style>
     h1 {
